# GoCatorLineScanner

./: CMakeLists.txt  README.md  dependencies.repos
config/: gocator_interface.yaml
gocator_application/: CMakeLists.txt  package.xml
gocator_application/config/: gocator_bt.btproj  gocator_bt.xml
gocator_application/include/: gocator_bt_nodes.hpp  gocator_widget.hpp
gocator_application/src/: gocator.ui  gocator_widget.cpp  main.cpp
gocator_driver/: CMakeLists.txt  package.xml
gocator_driver/include/gocator_driver/: gocator_commands.h
gocator_driver/src/: gocator_commands.cpp  main.cpp
src/: main.cpp
